Edit gimp-help-screen.css to resolve contrast issues

--- a/stylesheets/gimp-help-screen.css
+++ b/stylesheets/gimp-help-screen.css
@@ -728,32 +728,32 @@ hr {
   background-color: #feb;
 }
 .glossary dl dt,.variablelist dl dt,.variablelist dl dt span.term {
-  color: #99b;
+  color: #7272A1;
 }
 /* variablelist within glossary entry */
 .glossdiv .variablelist dl dt span.term {
-  color: #99b;
+  color: #7272A1;
 }
 /* Nested variablelist */
 .variablelist .variablelist dl dt,.variablelist .variablelist dl dt span.term
 {
-  color: #99c;
+  color: #7272A1;
 }
 .variablelist .variablelist .variablelist dl dt,.variablelist .variablelist .variablelist dl dt span.term
 {
-  color: #8ae;
+  color: #3870E0;
 }
 /* glossary quicklinks */
 a[id="glossary-quicklinks"]+table[class="simplelist"] a {
-  color: #7f7f7f; /* grey50 */
+  color: #757575; /* grey50 */
   text-decoration: none;
 }
 a[id="glossary-quicklinks"]+table[class="simplelist"] a:link {
-  color: #7f7f7f; /* grey50 */
+  color: #757575; /* grey50 */
   text-decoration: none;
 }
 a[id="glossary-quicklinks"]+table[class="simplelist"] a:visited {
-  color: #7f7f7f; /* grey50 */
+  color: #757575; /* grey50 */
   text-decoration: none;
 }
 a[id="glossary-quicklinks"]+table[class="simplelist"] a:hover {
